--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,8 +66,8 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
       
-    - name: Prepare NPM Package
-      run: ./gradlew prepareNpmPublication
+    #- name: Prepare NPM Package
+    #  run: ./gradlew prepareNpmPublication
 
     # Setup .npmrc file to publish to npm
     - name: Setup NodeJS
